# sharmat

./: CONTRIBUTING.md  Cargo.toml  README.md
src/: board.rs  game.rs  lib.rs  movement.rs  piece.rs  player.rs  rule.rs
tests/: board.rs  game.rs  movement.rs  movement.rs.old  piece.rs  test.rs
