[package]
name = "sharmat"
version = "0.1.0"
authors = ["Adrien Burgun <adrien.burgun@orange.fr>"]
edition = "2018"
default-run = "client"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced_native = "0.2.2"
iced_wgpu = "0.2.3"
chrono = "0.4"

[dependencies.iced]
version = "0.1"
features = ["canvas", "svg"]
